--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 	    <artifactId>aspectjweaver</artifactId>
 	    <version>1.8.13</version>
 	</dependency>		
+	<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.7.0</version>
+</dependency>
 <dependency>
     <groupId>org.apache.tomcat.embed</groupId>
     <artifactId>tomcat-embed-jasper</artifactId>
